# KalahZero

./: .gitignore  CLAUDE.md  README.md  _quarto.yml  index.qmd  pyproject.toml  setup.py
.github/workflows/: quarto-pages.yml
_freeze/tutorials/13_residual_depth_evaluation/execute-results/: html.json
checkpoints/: first_minimax_parity.pt
scripts/: agent_server.py  evaluate.py  export_browser_agent.py  inspect_position.py  overnight_coach.py  play_cli.py  self_play.py  train.py
src/kalah_zero/: __init__.py  _fast_game.cpp  agents.py  batched_mcts.py  encoding.py  evaluate.py  fast_game.py  game.py  mcts.py  network.py  train.py
src/kalah_zero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
styles/: site.scss
tests/: test_agents_mcts.py  test_encoding_training.py  test_game.py  test_overnight_coach.py
tutorials/: 00_plain_language_intro.md  01_kalah_rules.md  02_perfect_information_games.md  03_baseline_agents.md  04_monte_carlo_tree_search.md  05_puct.md  06_neural_policy_value_networks.md  07_self_play_training.md  08_alphazero_loss.md  09_evaluation.md  10_instrumentation.md  11_scaling_strength.md  12_codebase_walkthrough.md  13_residual_depth_evaluation.qmd  README.md  index.qmd
web/: agent_worker.js  app.js  index.html  index.qmd  residual_depth.json  rules.qmd  styles.css
